--- a/Style/reset.css
+++ b/Style/reset.css
@@ -3,7 +3,15 @@ h5, h6, p, span, ul, li {
     padding: 0;
     margin: 0;
 }
+ ul{
+     list-style-type: none;
+ }
 
+body{
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
 
 @media screen and (min-width : 1920px) {
     html{
